cmake_minimum_required(VERSION 2.6)
project(Derived)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable( main 
Cargo.cpp
Cargo.h
CargoCollection.cpp
CargoCollection.h
CargoIterator.cpp
CargoIterator.h
Collection.cpp
Collection.h
Colours.h
Core.cpp
Core.h
CrewDragon.cpp
CrewDragon.h
Dragon.cpp
Dragon.h
Engine.cpp
Engine.h
Falcon9.cpp
Falcon9.h
Falcon9Core.cpp
Falcon9Core.h
FalconHeavy.cpp
FalconHeavy.h
GroundMissionControl.cpp
GroundMissionControl.h
Human.cpp
Human.h
HumanCollection.cpp
HumanCollection.h
HumanIterator.cpp
HumanIterator.h
Iterator.cpp
Iterator.h
LaunchMode.cpp
LaunchMode.h
MerlinEngine.cpp
MerlinEngine.h
Rocket.cpp
Rocket.h
Satellite.cpp
Satellite.h
Simulations.cpp
Simulations.h
SpaceCraft.cpp
SpaceCraft.h
SpaceCraftFactory.cpp
SpaceCraftFactory.h
StarLinkSatellite.cpp
StarLinkSatellite.h
TestMode.cpp
TestMode.h
VacuumMerlinEngine.cpp
VacuumMerlinEngine.h
main.cpp
)
target_link_libraries(main ${GTEST_LIBRARIES} pthread)
