cmake_minimum_required(VERSION 3.16)
project(Derived)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable( main 
Cargo.cpp
Cargo.h
CargoCollection.cpp
CargoCollection.h
CargoIterator.cpp
CargoIterator.h
Collection.cpp
Collection.h
ConfigurationManager.cpp
ConfigurationManager.h
Core.cpp
Core.h
CrewDragon.cpp
CrewDragon.h
Dragon.cpp
Dragon.h
Engine.cpp
Engine.h
F9Stage1.cpp
F9Stage1.h
F9Stage2.cpp
F9Stage2.h
FHStage1.cpp
FHStage1.h
FHStage2.cpp
FHStage2.h
Falcon9.cpp
Falcon9.h
Falcon9Builder.cpp
Falcon9Builder.h
Falcon9Core.cpp
Falcon9Core.h
FalconHeavy.cpp
FalconHeavy.h
FalconHeavyBuilder.cpp
FalconHeavyBuilder.h
GroundMissionControl.cpp
GroundMissionControl.h
Human.cpp
Human.h
HumanCollection.cpp
HumanCollection.h
HumanIterator.cpp
HumanIterator.h
LaunchMode.cpp
LaunchMode.h
MerlinEngine.cpp
MerlinEngine.h
OperationsIteratorCargo.cpp
OperationsIteratorCargo.h
OperationsIteratorHumans.cpp
OperationsIteratorHumans.h
Rocket.cpp
Rocket.h
RocketBuilder.cpp
RocketBuilder.h
RocketState.cpp
RocketState.h
Satellite.cpp
Satellite.h
Simulations.cpp
Simulations.h
SpaceCraft.cpp
SpaceCraft.h
SpaceCraftFactory.cpp
SpaceCraftFactory.h
StarLinkSatellite.cpp
StarLinkSatellite.h
TestMode.cpp
TestMode.h
VacuumMerlinEngine.cpp
VacuumMerlinEngine.h
VectorOfCargo.cpp
VectorOfCargo.h
VectorOfHumans.cpp
VectorOfHumans.h
main.cpp
)
target_link_libraries(main ${GTEST_LIBRARIES} pthread)
